--- a/src/apps/1688Admin/webapp/estate-cleaning.pug
+++ b/src/apps/1688Admin/webapp/estate-cleaning.pug
@@ -1,12 +1,280 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 保洁卫生
+                .page-title 保洁卫生
+            .col-xs-12
+                .box-form.has-title.row-space-10
+                    .box-form-title 查询条件
+                    form#query_form.row.no-bottom(name='query_form')
+                        .col-xs-12.col-sm-6
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 订单号：
+                                input.form-control(type="text")
+                        .col-xs-12.col-sm-6
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 申请企业：
+                                input.form-control(type="text")
+                        .col-xs-12.col-sm-6.col-md-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 所在区域：
+                                input.form-control(type="text")
+                        .col-xs-12.col-sm-6.col-md-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 服务类型：
+                                select.form-control
+                                    option 鲜花更换
+                                    option 玻璃清洁
+                        .col-xs-12.col-sm-6.col-md-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 负责专员：
+                                input.form-control(type="text")
+                        .col-xs-12
+                            .btn.btn-line.btn-small
+                                i.fa.fa-search
+                                |&nbsp;查询
+            .col-xs-12
+                .toolbar#toolbar
+                    .btn.btn-theme#toolbtn_new
+                        i.fa.fa-plus
+                        |&nbsp;保洁新增
+                    .btn.btn-theme#toolbtn_assign
+                        i.fa.fa-hand-pointer-o
+                        |&nbsp;指派专员
+                table#table
+
+                    
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
+    script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-export.min.js')
+    script(src=JS_DIR + 'tableExport.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'toastr.min.js')
+    script(src=JS_DIR + 'BSModal.js')
+    script(src=JS_DIR + 'common.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            
+            var $rentTime = $('#rent_time');
+            
+            var $btn_new = $('#toolbtn_new');
+            var $btn_assign = $('#toolbtn_assign');
+
+            var $table = $('#table');
+            
+            window.commonTools.setDateTimeInput($rentTime);
+            
+            $table.bootstrapTable({
+                toolbar : '#toolbar',
+                showColumns : true,
+                showToggle : true,
+                showExport : true,
+                pagination : true,
+                singleSelect : true,
+                showPaginationSwitch : false,
+                clickToSelect : true,
+                columns: [
+                    {
+                        field: 'check',
+                        checkbox: true,
+                        align: 'center',
+                        valign: 'middle'
+                    },
+                    {
+                        field: 'id',
+                        title: '订单号',
+                        sortable: true,
+                        halign: 'center',
+                        align: 'right',
+                        width: 30
+                    }, 
+                    {
+                        field: 'orgname',
+                        title: '申请企业',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'section',
+                        title: '所在区域',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'room',
+                        title: '房间号',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'content',
+                        title: '服务内容',
+                        halign: 'center'
+                    },
+                    {
+                        field: 'date',
+                        title: '需求时间',
+                        halign: 'center',
+                        align : 'center'
+                    },
+                    {
+                        field: 'special',
+                        title: '负责专员',
+                        halign: 'center'
+                    },
+                    {
+                        field: 'creater',
+                        title: '创建人',
+                        halign: 'center'
+                    }
+                ],
+                data: [
+                    {
+                        id : 20180809001,
+                        orgname : '海尔',
+                        section : 'D1',
+                        room : '202',
+                        content : '保洁卫生',
+                        date : '2018-08-09',
+                        special : '王小二',
+                        creater : '前台客服'
+                    },
+                    {
+                        id : 20180809002,
+                        orgname : '海信',
+                        section : 'D2',
+                        room : '502',
+                        content : '擦玻璃',
+                        date : '2018-08-09',
+                        special : '王二小',
+                        creater : '海信'
+                    }
+                ]
+            });
+            
+            //设置工具栏按钮禁用状态
+            setToolBtnDisableState();
+            $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                setToolBtnDisableState();
+            });
+            
+            //新增弹窗的表单模板
+            var newHtml =   "<div class='row-space-10'>" +
+                                "<form class='row no-bottom'>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>申请客户：</div>" +
+                                            "<input class='form-control' type='text' id='customer'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>所在区域：</div>" +
+                                            "<input class='form-control' type='text' id='section'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>房间号：</div>" +
+                                            "<input class='form-control' type='text' id='room'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>所需服务：</div>" +
+                                            "<select class='form-control' id='type'>" +
+                                                "<option>鲜花更换</option>" +
+                                                "<option>玻璃清洁</option>" +
+                                            "</select>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>需求时间：</div>" +
+                                            "<div class='input-group date' id='date_group'>" +
+                                                "<input class='form-control' type='text' id='date'>" + 
+                                                "<div class='input-group-addon btn btn-line'>" +
+                                                    "<i class='fa fa-calendar'></i>" +
+                                                "</div>" +
+                                            "</div>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>备注：</div>" +
+                                            "<textarea class='form-control textarea' rows='3' id='desc'></textarea>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                "</form>" +
+                            "</div>";
+            
+            //新增
+            $btn_new.click(function () {
+                
+                BSModal.confirm({
+                    title : '新增维修',
+                    content : newHtml,
+                    width : '600px',
+                    maxHeight : '400px',
+                    btnOKDismiss : false,
+                    btnOK : '提交',
+                    afterInit: function(){
+                        window.commonTools.setDateTimeInput($('#date_group'));
+                    }
+                }).on(function(e, id) {
+                    if (!e) {
+                        return;
+                    }
+                    //提交成功后，刷新表格数据:
+                    //$table.bootstrapTable('load', data);
+                    
+                    $('#'+id).modal('hide');
+                    toastr.success('您新增的数据已提交！');
+                });
+            });
+            
+            //指派专员
+            $btn_assign.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-cleaning-assign.html';
+                }
+            });
+            
+            function setToolBtnDisableState() {
+                var tableSelections = $table.bootstrapTable('getSelections');
+                $btn_assign.attr('disabled', tableSelections.length != 1);
+            }
+            
+        });
+
+
+
+
                     
             
 
