--- a/src/apps/1688Admin/webapp/index-estate.pug
+++ b/src/apps/1688Admin/webapp/index-estate.pug
@@ -191,6 +191,12 @@ block js
                             btn_props : "data-toggle='iframelinker' data-link='estate-cleaning.html'"
                         },
                         {
+                            title : "保洁服务类型",
+                            icon_class : "fa fa-list",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='estate-cleaning-type.html'"
+                        },
+                        {
                             title : "绿植管理",
                             icon_class : "fa fa-leaf",
                             selected : false,
