--- a/src/apps/1688Admin/webapp/stylus/box-form.styl
+++ b/src/apps/1688Admin/webapp/stylus/box-form.styl
@@ -41,5 +41,7 @@ BOX_FORM_TITLE_FCOLOR = GRAY_66
         color BOX_FORM_TITLE_FCOLOR
     &.has-title
         padding-top BOX_FORM_PADDING_TITLE
+        margin-top 0.5*BOX_FORM_TITLE_HEIGHT
+        margin-bottom 0.5*BOX_FORM_TITLE_HEIGHT
     &.has-tail
         padding-bottom BOX_FORM_PADDING_TITLE
