--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -205,6 +205,10 @@ for i in (1..10)
             &:before
                 cacuHeightPct(i,j)
 
+.abs-hp-9of16
+    &:before
+        cacuHeightPct(9,16)
+
 
 @require '../../components/topbar/index'
 @require '../../components/tree-menu/index'
