--- a/src/apps/1688Admin/webapp/estate-decoration.pug
+++ b/src/apps/1688Admin/webapp/estate-decoration.pug
@@ -1,13 +1,207 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 装修管理
+                .page-title 装修管理
+            .col-xs-12
+                .toolbar#toolbar
+                    .btn.btn-theme#toolbtn_approval
+                        i.fa.fa-check-square
+                        |&nbsp;审批
+                    .btn.btn-theme#toolbtn_refund
+                        i.fa.fa-money
+                        |&nbsp;退款申请
+                table#table
+
                     
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
+    script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-export.min.js')
+    script(src=JS_DIR + 'tableExport.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'toastr.min.js')
+    script(src=JS_DIR + 'BSModal.js')
+    script(src=JS_DIR + 'common.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            
+            var $btn_approval = $('#toolbtn_approval');
+            var $btn_refund = $('#toolbtn_refund');
+
+            var $table = $('#table');
+            
+            $table.bootstrapTable({
+                toolbar : '#toolbar',
+                showColumns : true,
+                showToggle : true,
+                showExport : true,
+                pagination : true,
+                showPaginationSwitch : false,
+                singleSelect : true, //如没有多选操作，可设置该属性禁用多选
+                clickToSelect : true,
+                columns: [
+                    {
+                        field: 'check',
+                        checkbox: true,
+                        align: 'center',
+                        valign: 'middle'
+                    },
+                    {
+                        field: 'id',
+                        title: '申请装修号',
+                        sortable: true,
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'applier',
+                        title: '申请人',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'title',
+                        title: '标题',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'apply_date',
+                        title: '申请时间',
+                        halign: 'center',
+                        align: 'center'
+                    },
+                    {
+                        field: 'est_time',
+                        title: '预计工期(天)',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'state',
+                        title: '状态',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'due_fee',
+                        title: '应交保证金(元)',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'actual_fee',
+                        title: '实缴保证金(元)',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'refund_fee',
+                        title: '退还金额(元)',
+                        halign: 'center',
+                        align: 'right'
+                    }
+                ],
+                data: [
+                    {
+                        id : 20180808001,
+                        applier : '王筱赟',
+                        title : '更换壁纸',
+                        apply_date : '2018-08-08',
+                        est_time : '14',
+                        state : '同意',
+                        due_fee : '998',
+                        actual_fee : '998',
+                        refund_fee : '0'
+                    },
+                    {
+                        id : 20180808002,
+                        applier : '舒伯特',
+                        title : '线路改造',
+                        apply_date : '2018-08-09',
+                        est_time : '12',
+                        state : '拒绝'
+                    }
+                ]
+            });
+            
+            //设置工具栏按钮禁用状态
+            setToolBtnDisableState();
+            $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                setToolBtnDisableState();
+            });
+            
+            
+            //审批
+            $btn_approval.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-decoration-approval.html';
+                }
+                
+            });
+            
+            //退款申请
+            $btn_refund.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-decoration-apply.html';
+                }
+            });
+            
+            
+            
+            
+            
+            function getIdSelections() {
+                return $.map($table.bootstrapTable('getSelections'), function (row) {
+                    return row.id
+                });
+            }
+            
+            function setToolBtnDisableState() {
+                var tableSelections = $table.bootstrapTable('getSelections');
+                $btn_approval.attr('disabled', tableSelections.length != 1);
+                $btn_refund.attr('disabled', tableSelections.length != 1);
+            }
+            
+        });
+
+
+
+
             
 
 
