--- a/src/apps/1688Admin/webapp/estate-delivery-order.pug
+++ b/src/apps/1688Admin/webapp/estate-delivery-order.pug
@@ -1,12 +1,307 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 订单管理
+                .page-title 订单管理
+            .col-xs-12
+                .toolbar#toolbar
+                    .btn.btn-theme#toolbtn_new
+                        i.fa.fa-plus
+                        |&nbsp;新增
+                    .btn.btn-theme#toolbtn_edit
+                        i.fa.fa-edit
+                        |&nbsp;编辑
+                    .btn.btn-theme#toolbtn_assign
+                        i.fa.fa-hand-pointer-o
+                        |&nbsp;指派
+                table#table
+
+                    
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
+    script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-export.min.js')
+    script(src=JS_DIR + 'tableExport.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'toastr.min.js')
+    script(src=JS_DIR + 'BSModal.js')
+    script(src=JS_DIR + 'common.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            
+            var $btn_new = $('#toolbtn_new');
+            var $btn_edit = $('#toolbtn_edit');
+            var $btn_assign = $('#toolbtn_assign');
+
+            var $table = $('#table');
+            
+            $table.bootstrapTable({
+                toolbar : '#toolbar',
+                showColumns : true,
+                showToggle : true,
+                showExport : true,
+                pagination : true,
+                singleSelect : true,
+                showPaginationSwitch : false,
+                clickToSelect : true,
+                columns: [
+                    {
+                        field: 'check',
+                        checkbox: true,
+                        align: 'center',
+                        valign: 'middle'
+                    },
+                    {
+                        field: 'id',
+                        title: '序号',
+                        sortable: true,
+                        halign: 'center',
+                        align: 'right',
+                        width: 30
+                    }, 
+                    {
+                        field: 'name',
+                        title: '名称',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'applier',
+                        title: '申请人',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'apply_time',
+                        title: '申请时间',
+                        halign: 'center',
+                        align: 'center'
+                    }, 
+                    {
+                        field: 'special',
+                        title: '负责专员',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'address',
+                        title: '位置',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'creater',
+                        title: '创建人',
+                        halign: 'center'
+                    }
+                ],
+                data: [
+                    {
+                        id : 1,
+                        name : '大桶水', 
+                        applier : '王小二', 
+                        apply_time : '2018-10-11 09:32', 
+                        special : '王二小', 
+                        address : 'D2 202', 
+                        creater : 'admin'
+                    },
+                    {
+                        id : 2,
+                        name : '财经日报', 
+                        applier : '王小二', 
+                        apply_time : '2018-09-11 13:54', 
+                        special : '王二小', 
+                        address : 'D1 306', 
+                        creater : 'admin'
+                    }
+                ]
+            });
+            
+            //设置工具栏按钮禁用状态
+            setToolBtnDisableState();
+            $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                setToolBtnDisableState();
+            });
+            
+            //新增&编辑弹窗的表单模板
+            var modalHtml = "<div class='row-space-10'>" +
+                                "<form class='row no-bottom'>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>申请人：</div>" +
+                                            "<input class='form-control' type='text' id='applier'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>申请类型：</div>" +
+                                            "<select class='form-control' id='type'>" +
+                                                "<option>大桶水</option>" +
+                                                "<option>财经日报</option>" +
+                                            "</select>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>派送位置：</div>" +
+                                            "<input class='form-control' type='text' id='address'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>指派专员：</div>" +
+                                            "<select class='form-control' id='special'>" +
+                                                "<option>专员A</option>" +
+                                                "<option>专员B</option>" +
+                                            "</select>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                "</form>" +
+                            "</div>";
+            
+            
+            
+            //新增
+            $btn_new.click(function () {
+                
+                BSModal.confirm({
+                    title : '新增',
+                    content : modalHtml,
+                    width : '600px',
+                    maxHeight : '400px',
+                    btnOKDismiss : false,
+                    btnOK : '提交',
+                    afterInit: function(){
+                        
+                    }
+                }).on(function(e, id) {
+                    if (!e) {
+                        return;
+                    }
+                    //提交成功后，刷新表格数据:
+                    //$table.bootstrapTable('load', data);
+                    
+                    $('#'+id).modal('hide');
+                    toastr.success('您新增的数据已提交！');
+                });
+            });
+            
+            //编辑
+            $btn_edit.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    BSModal.confirm({
+                        title : '编辑',
+                        content : modalHtml,
+                        width : '600px',
+                        maxHeight : '400px',
+                        btnOKDismiss : false,
+                        btnOK : '提交',
+                        afterInit: function(){
+                            $('#applier').val('王小二');
+                            $('#type').val('财经日报');
+                            $('#address').val('D2 202');
+                            $('#special').val('专员B');
+                        }
+                    }).on(function(e, id) {
+                        if (!e) {
+                            return;
+                        }
+                        //提交成功后，刷新表格数据:
+                        //$table.bootstrapTable('load', data);
+                        
+                        $('#'+id).modal('hide');
+                        toastr.success('您编辑的数据已提交！');
+                    });
+                }
+            });
+            
+            //指派
+            $btn_assign.click(function () {
+                //按钮如果不是disabled状态,则可进行操作
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    
+                    
+                    BSModal.confirm({
+                        title : '指派',
+                        content : modalHtml,
+                        width : '600px',
+                        maxHeight : '400px',
+                        btnOKDismiss : false,
+                        btnOK : '提交',
+                        afterInit: function(){
+                            $('#applier').val('王小二').attr('disabled', true);
+                            $('#type').val('财经日报').attr('disabled', true);
+                            $('#address').val('D2 202').attr('disabled', true);
+                            $('#special').val('专员B');
+                        }
+                    }).on(function(e, id) {
+                        if (!e) {
+                            return;
+                        }
+                        
+                        window.location.href='estate-delivery-order-upload.html';
+                    });
+                }
+            });
+            
+            function getIdSelections() {
+                return $.map($table.bootstrapTable('getSelections'), function (row) {
+                    return row.id
+                });
+            }
+            
+            function setToolBtnDisableState() {
+                var tableSelections = $table.bootstrapTable('getSelections');
+                $btn_assign.attr('disabled', tableSelections.length != 1);
+                $btn_edit.attr('disabled', tableSelections.length != 1);
+            }
+            
+        });
+
+
+
+
+                    
+            
+
+
+
+
+                    
+            
+
+
+
+
                     
             
 
