--- a/src/apps/1688Admin/webapp/estate-stock-assets.pug
+++ b/src/apps/1688Admin/webapp/estate-stock-assets.pug
@@ -1,9 +1,185 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 固定资产
+                .page-title 固定资产
+            .col-xs-12
+                .toolbar#toolbar
+                    a.btn.btn-theme#toolbtn_buy(href='estate-stock-assets-buy.html')
+                        i.fa.fa-money
+                        |&nbsp;采购管理
+                    .btn.btn-theme#toolbtn_get
+                        i.fa.fa-inbox
+                        |&nbsp;领用管理
+                    .btn.btn-theme#toolbtn_scrap
+                        i.fa.fa-trash
+                        |&nbsp;报废管理
+                    .btn.btn-theme#toolbtn_sell
+                        i.fa.fa-shopping-cart
+                        |&nbsp;出售管理
+                table#table
+
+                    
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
+    script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-export.min.js')
+    script(src=JS_DIR + 'tableExport.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'toastr.min.js')
+    script(src=JS_DIR + 'BSModal.js')
+    script(src=JS_DIR + 'common.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            
+            var $btn_buy = $('#toolbtn_buy');
+            var $btn_get = $('#toolbtn_get');
+            var $btn_scrap = $('#toolbtn_scrap');
+            var $btn_sell = $('#toolbtn_sell');
+            
+            var $table = $('#table');
+            
+            $table.bootstrapTable({
+                toolbar : '#toolbar',
+                showColumns : true,
+                showToggle : true,
+                showExport : true,
+                pagination : true,
+                showPaginationSwitch : false,
+                clickToSelect : true,
+                columns: [
+                    {
+                        field: 'check',
+                        checkbox: true,
+                        align: 'center',
+                        valign: 'middle'
+                    },
+                    {
+                        field: 'type',
+                        title: '资产类型',
+                        sortable: true,
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'name',
+                        title: '资产名称',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'in_num',
+                        title: '入库数',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'out_num',
+                        title: '出库数',
+                        halign: 'center',
+                        align: 'right'
+                    }, 
+                    {
+                        field: 'current_num',
+                        title: '在库数',
+                        halign: 'center',
+                        align: 'right'
+                    }
+                ],
+                data: [
+                    {
+                        type : '固定资产',
+                        name : '电脑',
+                        in_num : '821',
+                        out_num : '800',
+                        current_num : '21'
+                    },
+                    {
+                        type : '易耗品',
+                        name : 'A4纸',
+                        in_num : '300',
+                        out_num : '289',
+                        current_num : '11'
+                    }
+                ]
+            });
+            
+            //设置工具栏按钮禁用状态
+            setToolBtnDisableState();
+            $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                setToolBtnDisableState();
+            });
+            
+            //领用申请
+            $btn_get.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-stock-assets-get.html';
+                }
+            });
+            
+            //报废管理
+            $btn_scrap.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-stock-assets-scrap.html';
+                }
+            });
+            
+            //出售管理
+            $btn_scrap.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    window.location.href='estate-stock-assets-sell.html';
+                }
+            });
+            
+            function setToolBtnDisableState() {
+                var tableSelections = $table.bootstrapTable('getSelections');
+                $btn_get.attr('disabled', !tableSelections.length);
+                $btn_scrap.attr('disabled', !tableSelections.length);
+                $btn_sell.attr('disabled', !tableSelections.length);
+            }
+            
+        });
+
+
+
