--- a/src/apps/1688Admin/webapp/estate-stock-storage.pug
+++ b/src/apps/1688Admin/webapp/estate-stock-storage.pug
@@ -1,9 +1,406 @@
 extends layout
 
-
+block css
+    link(rel='stylesheet', href=CSS_DIR + 'font-awesome.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-table.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'bootstrap-datetimepicker.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/fileinput.min.css')
+    link(rel='stylesheet', href=JS_DIR + 'bootstrap-fileinput/css/theme.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'toastr.min.css')
+    link(rel='stylesheet', href=CSS_DIR + 'index.css')
 
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 入库管理
+                .page-title 入库管理
+            .col-xs-12
+                .box-form.has-title.row-space-10
+                    .box-form-title 查询条件
+                    form#query_form.row.no-bottom(name='query_form')
+                        .col-xs-12.col-xs-6.col-sm-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 采购单号：
+                                input.form-control(type="text")
+                        .col-xs-12.col-xs-6.col-sm-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 采购人：
+                                input.form-control(type="text")
+                        .col-xs-12.col-xs-6.col-sm-4
+                            .form-group.cool-form-group.form-group-sm
+                                .cool-form-label.text-right.control-label 入库时间：
+                                .input-group.date#in_time
+                                    input.form-control(type="text")
+                                    .btn.btn-line.input-group-addon
+                                        i.fa.fa-calendar
+                        .col-xs-12
+                            .btn.btn-line.btn-small
+                                i.fa.fa-search
+                                |&nbsp;查询
+            .col-xs-12
+                .toolbar#toolbar
+                    .btn.btn-theme#toolbtn_new
+                        i.fa.fa-plus
+                        |&nbsp;新增入库
+                    .btn.btn-theme#toolbtn_edit
+                        i.fa.fa-edit
+                        |&nbsp;编辑
+                    .btn.btn-theme#toolbtn_preview
+                        i.fa.fa-eye
+                        |&nbsp;查看
+                table#table
+
+                    
+block js
+    script(src=JS_DIR + 'jquery.min.js')
+    script(src=JS_DIR + 'bootstrap.min.js')
+    script(src=JS_DIR + 'moment/moment.min.js')
+    script(src=JS_DIR + 'moment/zh-cn.js')
+    script(src=JS_DIR + 'bootstrap-datetimepicker.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src=JS_DIR + 'bootstrap-table/bootstrap-table-export.min.js')
+    script(src=JS_DIR + 'tableExport.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/fileinput.min.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/zh.js')
+    script(src=JS_DIR + 'bootstrap-fileinput/theme.min.js')
+    script(src=JS_DIR + 'toastr.min.js')
+    script(src=JS_DIR + 'BSModal.js')
+    script(src=JS_DIR + 'common.js')
+    script(src=JS_DIR + 'app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            
+            var $inTime = $('#in_time');
+            
+            var $btn_new = $('#toolbtn_new');
+            var $btn_edit = $('#toolbtn_edit');
+            var $btn_preview = $('#toolbtn_preview');
+            var $table = $('#table');
+            
+            window.commonTools.setDateTimeInput($inTime);
+            
+            $table.bootstrapTable({
+                toolbar : '#toolbar',
+                showColumns : true,
+                showToggle : true,
+                showExport : true,
+                pagination : true,
+                singleSelect : true, //如没有多选操作，可设置该属性禁用多选
+                showPaginationSwitch : false,
+                clickToSelect : true,
+                columns: [
+                    {
+                        field: 'check',
+                        checkbox: true,
+                        align: 'center',
+                        valign: 'middle'
+                    },
+                    {
+                        field: 'purchase_num',
+                        title: '采购单号',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'stock_num',
+                        title: '入库单号',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'name',
+                        title: '物品名称',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'apply_qtty',
+                        title: '申请数量',
+                        halign: 'center',
+                        aligh: 'right'
+                    },
+                    {
+                        field: 'buyer',
+                        title: '采购厂商',
+                        halign: 'center'
+                    }, 
+                    {
+                        field: 'stock_qtty',
+                        title: '入库数量',
+                        halign: 'center',
+                        align: 'right'
+                    },
+                    {
+                        field: 'stock_type',
+                        title: '入库型号',
+                        halign: 'center'
+                    },
+                    {
+                        field: 'stock_price',
+                        title: '入库价格(元)',
+                        halign: 'center',
+                        aligh: 'right'
+                    },
+                    {
+                        field: 'stock_time',
+                        title: '入库时间',
+                        halign: 'center',
+                        align: 'center'
+                    },
+                    {
+                        field: 'buyer_name',
+                        title: '采购人',
+                        halign: 'center'
+                    }
+                ],
+                data: [
+                    {
+                        purchase_num: '201800391823',
+                        stock_num: '201895128309',
+                        name: '45W节能灯',
+                        apply_qtty: '800',
+                        buyer:  '西门子',
+                        stock_qtty: '200',
+                        stock_type: 'f22',
+                        stock_price: '42',
+                        stock_time: '2018-08-09',
+                        buyer_name: '王小二'
+                    },
+                    {
+                        purchase_num: '201800391392',
+                        stock_num: '201895128593',
+                        name: '球形阀',
+                        apply_qtty: '200',
+                        buyer:  '青岛铸造厂',
+                        stock_qtty: '120',
+                        stock_type: 'B-3',
+                        stock_price: '25.6',
+                        stock_time: '2018-08-13',
+                        buyer_name: '王二小'
+                    }
+                ]
+            });
+            
+            //设置工具栏按钮禁用状态
+            setToolBtnDisableState();
+            $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                setToolBtnDisableState();
+            });
+            
+            //新增&编辑弹窗的表单模板
+            var modalHtml = "<div class='row-space-10'>" +
+                                "<form class='row no-bottom'>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购单号：</div>" +
+                                            "<select class='form-control' id='purchase_num'>" +
+                                            "</select>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>物品名称：</div>" +
+                                            "<select class='form-control' id='name'>" +
+                                            "</select>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购数量：</div>" +
+                                            "<input class='form-control' type='text' id='purchase_qtty'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>入库数：</div>" +
+                                            "<input class='form-control' type='text' id='stock_qtty'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>生产厂商：</div>" +
+                                            "<input class='form-control' type='text' id='producer'>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购价：</div>" +
+                                            "<div class='input-group'>" +
+                                                "<input class='form-control' type='text' id='purchase_price'>" + 
+                                                "<div class='input-group-addon'>元</div>" +
+                                            "</div>" +
+                                        "</div>" +
+                                    "</div>" +
+                                "</form>" +
+                            "</div>";
+            
+            //预览弹窗的表单模板
+            var modalPreviewHtml = "<div class='row-space-10'>" +
+                                "<div class='row no-bottom'>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购单号：</div>" +
+                                            "<div class='cool-form-content'>2018001</div>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>物品名称：</div>" +
+                                            "<div class='cool-form-content'>45W节能灯</div>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购数量：</div>" +
+                                            "<div class='cool-form-content'>233</div>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>入库数：</div>" +
+                                            "<div class='cool-form-content'>213</div>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>生产厂商：</div>" +
+                                            "<div class='cool-form-content'>西门子</div>" +
+                                        "</div>" +
+                                    "</div>" +
+                                    "<div class='col-xs-12'>" +
+                                        "<div class='form-group form-group-sm cool-form-group'>" +
+                                            "<div class='control-label cool-form-label text-right'>采购价：</div>" +
+                                            "<div class='cool-form-content'>40元</div>" + 
+                                        "</div>" +
+                                    "</div>" +
+                                "</div>" +
+                            "</div>";
+            
+            //弹窗初始化后，给表单赋初始值,type区分新增或编辑
+            function modalInit(type){
+                
+                //获取采购单号选项数据，此处直接给出用户前端展示
+                var purchaseNumOptionData = [
+                    {
+                        value:'2018001',
+                        text:'2018001'
+                    },
+                    {
+                        value:'2018002',
+                        text:'2018002'
+                    }
+                ];
+                window.commonTools.addSelectOptions($('#purchase_num'), purchaseNumOptionData);
+                
+                //获取物品名称选项数据，此处直接给出用户前端展示
+                var nameOptionData = [
+                    {
+                        value:'45W节能灯',
+                        text:'45W节能灯'
+                    },
+                    {
+                        value:'球形阀',
+                        text:'球形阀'
+                    }
+                ];
+                window.commonTools.addSelectOptions($('#name'), nameOptionData);
+                
+                if(type == '新增') {
+                    //新增弹窗需要处理的一些逻辑
+                } else if(type == '编辑') {
+                    //编辑弹窗需要处理的一些逻辑，比如载入初始表单数据
+                }
+            }
+            
+            
+            //新增
+            $btn_new.click(function () {
+                
+                BSModal.confirm({
+                    title : '新增入库',
+                    content : modalHtml,
+                    width : '600px',
+                    maxHeight : '400px',
+                    btnOKDismiss : false,
+                    btnOK : '入库',
+                    afterInit: function(){
+                        modalInit('新增');
+                    }
+                }).on(function(e, id) {
+                    if (!e) {
+                        return;
+                    }
+                    //提交成功后，刷新表格数据:
+                    //$table.bootstrapTable('load', data);
+                    
+                    $('#'+id).modal('hide');
+                    toastr.success('您新增的数据已提交！');
+                });
+            });
+            
+            //编辑
+            $btn_edit.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    BSModal.confirm({
+                        title : '编辑',
+                        content : modalHtml,
+                        width : '600px',
+                        maxHeight : '400px',
+                        btnOKDismiss : false,
+                        btnOK : '提交',
+                        afterInit: function(){
+                            modalInit('编辑');
+                        }
+                    }).on(function(e, id) {
+                        if (!e) {
+                            return;
+                        }
+                        //提交成功后，刷新表格数据:
+                        //$table.bootstrapTable('load', data);
+                        
+                        $('#'+id).modal('hide');
+                        toastr.success('您编辑的数据已提交！');
+                        
+                    });
+                }
+            });
+            
+            //查看
+            $btn_preview.click(function () {
+                if(!$(this).attr('disabled')) {
+                    //取表格的选中行数据
+                    var arrselections = $table.bootstrapTable('getSelections');
+                    if (arrselections.length <= 0) {
+                        toastr.warning('请选择有效数据');
+                        return;
+                    }
+                    console.log(JSON.stringify(arrselections));
+                    
+                    BSModal.confirm({
+                        title : '查看',
+                        content : modalPreviewHtml,
+                        width : '600px',
+                        maxHeight : '400px',
+                        btnOKDismiss : true,
+                        btnOK : '确定',
+                        btnCancel: ''
+                    });
+                }
+            });
+            
+            function setToolBtnDisableState() {
+                var tableSelections = $table.bootstrapTable('getSelections');
+                $btn_edit.attr('disabled', tableSelections.length != 1);
+                $btn_preview.attr('disabled', tableSelections.length != 1);
+            }
+            
+        });
+
+
+
