--- a/src/apps/1688Admin/webapp/stylus/section-title.styl
+++ b/src/apps/1688Admin/webapp/stylus/section-title.styl
@@ -36,6 +36,7 @@ SECTION_TITLE_SHOULDER_FSIZE = 0.12rem
         display block
         background-color THEME_COLOR
     .section-title-text
+        float left
         background-color BODY_BG
         width auto
         padding 0 SECTION_TITLE_PH
