--- a/src/apps/1688Admin/webapp/stylus/utils.styl
+++ b/src/apps/1688Admin/webapp/stylus/utils.styl
@@ -71,6 +71,19 @@
         display table
         clear both
 
+.full-abs-img
+    img
+        width 100%
+        height 100%
+        display block
+    &:before
+        content ""
+        display table
+    &:after
+        content ""
+        display table
+        clear both
+
 //no border
 .no-bt
 	border-top none !important
